tests/bindings/swift/phantom_protocolFFI.h

uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_peer_addr(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_queued_count(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_recv(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_resumption_hint(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_send(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomsession_set_rekey_threshold(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomstream_disconnect(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomstream_recv(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomstream_send_reliable(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomstream_send_unreliable(void
    
);
uint16_t uniffi_phantom_protocol_checksum_method_phantomstream_stream_id(void
    
);