tests/bindings/phantom_protocol.py

_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_peer_addr.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_peer_addr.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_queued_count.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_queued_count.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_recv.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_recv.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_resumption_hint.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_resumption_hint.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_send.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_send.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_set_rekey_threshold.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomsession_set_rekey_threshold.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomstream_disconnect.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomstream_disconnect.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomstream_recv.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomstream_recv.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomstream_send_reliable.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomstream_send_reliable.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomstream_send_unreliable.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomstream_send_unreliable.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomstream_stream_id.argtypes = (
)
_UniffiLib.uniffi_phantom_protocol_checksum_method_phantomstream_stream_id.restype = ctypes.c_uint16

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# RustFuturePoll values
_UNIFFI_RUST_FUTURE_POLL_READY = 0
_UNIFFI_RUST_FUTURE_POLL_WAKE = 1

# Stores futures for _uniffi_continuation_callback
_UniffiContinuationHandleMap = _UniffiHandleMap()

_UNIFFI_GLOBAL_EVENT_LOOP = None

"""
Set the event loop to use for async functions

This is needed if some async functions run outside of the eventloop, for example:
    - A non-eventloop thread is spawned, maybe from `EventLoop.run_in_executor` or maybe from the
      Rust code spawning its own thread.
    - The Rust code calls an async callback method from a sync callback function, using something
      like `pollster` to block on the async call.

In this case, we need an event loop to run the Python async function, but there's no eventloop set
for the thread.  Use `uniffi_set_event_loop` to force an eventloop to be used in this case.
"""
def uniffi_set_event_loop(eventloop: asyncio.BaseEventLoop):
    global _UNIFFI_GLOBAL_EVENT_LOOP
    _UNIFFI_GLOBAL_EVENT_LOOP = eventloop

def _uniffi_get_event_loop():
    if _UNIFFI_GLOBAL_EVENT_LOOP is not None:
        return _UNIFFI_GLOBAL_EVENT_LOOP
    else:
        return asyncio.get_running_loop()

# Continuation callback for async functions
# lift the return value or error and resolve the future, causing the async function to resume.
@_UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK
def _uniffi_continuation_callback(future_ptr, poll_code):
    (eventloop, future) = _UniffiContinuationHandleMap.remove(future_ptr)
    eventloop.call_soon_threadsafe(_uniffi_set_future_result, future, poll_code)

def _uniffi_set_future_result(future, poll_code):
    if not future.cancelled():
        future.set_result(poll_code)

async def _uniffi_rust_call_async(rust_future, ffi_poll, ffi_complete, ffi_free, lift_func, error_ffi_converter):
    try:
        eventloop = _uniffi_get_event_loop()

        # Loop and poll until we see a _UNIFFI_RUST_FUTURE_POLL_READY value
        while True:
            future = eventloop.create_future()
            ffi_poll(
                rust_future,
                _uniffi_continuation_callback,
                _UniffiContinuationHandleMap.insert((eventloop, future)),
            )
            poll_code = await future
            if poll_code == _UNIFFI_RUST_FUTURE_POLL_READY:
                break

        return lift_func(
            _uniffi_rust_call_with_error(error_ffi_converter, ffi_complete, rust_future)
        )
    finally:
        ffi_free(rust_future)

# Public interface members begin here.


# The Duration type.
Duration = datetime.timedelta

# There is a loss of precision when converting from Rust durations,
# which are accurate to the nanosecond,
# to Python durations, which are only accurate to the microsecond.
class _UniffiFfiConverterDuration(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        seconds = buf.read_u64()
        microseconds = buf.read_u32() / 1.0e3
        return datetime.timedelta(seconds=seconds, microseconds=microseconds)

    @staticmethod
    def check_lower(value):
        seconds = value.seconds + value.days * 24 * 3600
        if seconds < 0:
            raise ValueError("Invalid duration, must be non-negative")

    @staticmethod
    def write(value, buf):
        seconds = value.seconds + value.days * 24 * 3600
        nanoseconds = value.microseconds * 1000
        buf.write_i64(seconds)
        buf.write_u32(nanoseconds)

class _UniffiFfiConverterUInt32(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u32"
    VALUE_MIN = 0
    VALUE_MAX = 2**32

    @staticmethod
    def read(buf):
        return buf.read_u32()

    @staticmethod
    def write(value, buf):
        buf.write_u32(value)

class _UniffiFfiConverterBoolean:
    @classmethod
    def check_lower(cls, value):
        return not not value

    @classmethod
    def lower(cls, value):
        return 1 if value else 0

    @staticmethod
    def lift(value):
        return value != 0

    @classmethod
    def read(cls, buf):
        return cls.lift(buf.read_u8())

    @classmethod
    def write(cls, value, buf):
        buf.write_u8(value)

class _UniffiFfiConverterUInt8(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u8"
    VALUE_MIN = 0
    VALUE_MAX = 2**8

    @staticmethod
    def read(buf):
        return buf.read_u8()

    @staticmethod
    def write(value, buf):
        buf.write_u8(value)

@dataclass
class PhantomConfig:
    def __init__(self, *, keepalive_interval:Duration, session_timeout:Duration, max_packet_size:int, send_buffer_size:int, recv_buffer_size:int, session_cache_capacity:int, session_ticket_lifetime:Duration, auto_fallback:bool, fallback_loss_threshold:int, fallback_failure_threshold:int, connect_timeout:Duration, upgrade_delay:Duration):
        self.keepalive_interval = keepalive_interval
        self.session_timeout = session_timeout
        self.max_packet_size = max_packet_size
        self.send_buffer_size = send_buffer_size
        self.recv_buffer_size = recv_buffer_size
        self.session_cache_capacity = session_cache_capacity
        self.session_ticket_lifetime = session_ticket_lifetime
        self.auto_fallback = auto_fallback
        self.fallback_loss_threshold = fallback_loss_threshold
        self.fallback_failure_threshold = fallback_failure_threshold
        self.connect_timeout = connect_timeout
        self.upgrade_delay = upgrade_delay
        
        

    
    def __str__(self):
        return "PhantomConfig(keepalive_interval={}, session_timeout={}, max_packet_size={}, send_buffer_size={}, recv_buffer_size={}, session_cache_capacity={}, session_ticket_lifetime={}, auto_fallback={}, fallback_loss_threshold={}, fallback_failure_threshold={}, connect_timeout={}, upgrade_delay={})".format(self.keepalive_interval, self.session_timeout, self.max_packet_size, self.send_buffer_size, self.recv_buffer_size, self.session_cache_capacity, self.session_ticket_lifetime, self.auto_fallback, self.fallback_loss_threshold, self.fallback_failure_threshold, self.connect_timeout, self.upgrade_delay)
    def __eq__(self, other):
        if self.keepalive_interval != other.keepalive_interval:
            return False
        if self.session_timeout != other.session_timeout:
            return False
        if self.max_packet_size != other.max_packet_size:
            return False
        if self.send_buffer_size != other.send_buffer_size:
            return False
        if self.recv_buffer_size != other.recv_buffer_size:
            return False
        if self.session_cache_capacity != other.session_cache_capacity:
            return False
        if self.session_ticket_lifetime != other.session_ticket_lifetime:
            return False
        if self.auto_fallback != other.auto_fallback:
            return False
        if self.fallback_loss_threshold != other.fallback_loss_threshold:
            return False
        if self.fallback_failure_threshold != other.fallback_failure_threshold:
            return False
        if self.connect_timeout != other.connect_timeout:
            return False
        if self.upgrade_delay != other.upgrade_delay:
            return False
        return True

class _UniffiFfiConverterTypePhantomConfig(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        return PhantomConfig(
            keepalive_interval=_UniffiFfiConverterDuration.read(buf),
            session_timeout=_UniffiFfiConverterDuration.read(buf),
            max_packet_size=_UniffiFfiConverterUInt32.read(buf),
            send_buffer_size=_UniffiFfiConverterUInt32.read(buf),
            recv_buffer_size=_UniffiFfiConverterUInt32.read(buf),
            session_cache_capacity=_UniffiFfiConverterUInt32.read(buf),
            session_ticket_lifetime=_UniffiFfiConverterDuration.read(buf),
            auto_fallback=_UniffiFfiConverterBoolean.read(buf),
            fallback_loss_threshold=_UniffiFfiConverterUInt8.read(buf),
            fallback_failure_threshold=_UniffiFfiConverterUInt32.read(buf),
            connect_timeout=_UniffiFfiConverterDuration.read(buf),
            upgrade_delay=_UniffiFfiConverterDuration.read(buf),
        )

    @staticmethod
    def check_lower(value):
        _UniffiFfiConverterDuration.check_lower(value.keepalive_interval)
        _UniffiFfiConverterDuration.check_lower(value.session_timeout)
        _UniffiFfiConverterUInt32.check_lower(value.max_packet_size)
        _UniffiFfiConverterUInt32.check_lower(value.send_buffer_size)
        _UniffiFfiConverterUInt32.check_lower(value.recv_buffer_size)
        _UniffiFfiConverterUInt32.check_lower(value.session_cache_capacity)
        _UniffiFfiConverterDuration.check_lower(value.session_ticket_lifetime)
        _UniffiFfiConverterBoolean.check_lower(value.auto_fallback)
        _UniffiFfiConverterUInt8.check_lower(value.fallback_loss_threshold)
        _UniffiFfiConverterUInt32.check_lower(value.fallback_failure_threshold)
        _UniffiFfiConverterDuration.check_lower(value.connect_timeout)
        _UniffiFfiConverterDuration.check_lower(value.upgrade_delay)
